--- a/react-app/src/styles/app.css
+++ b/react-app/src/styles/app.css
@@ -1,8 +1,19 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  padding-top: 5rem;
   text-align: center;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #333; /* or another color */
+  color: white;
+  padding: 1rem;
+  text-align: center;
+  z-index: 1000; /* ensures it stays on top */
 }
 
 .logo {
