--- a/react-app/src/styles/login-page.css
+++ b/react-app/src/styles/login-page.css
@@ -1,5 +1,11 @@
 .login-wrapper {
-    display: flex;
+    display: inline-block;
     flex-direction: column;
     align-items: center;
+    background-color: #92A8D1;
+    padding: 10px;
+    border-radius: 25px;
+    width: 300px;
+    height: 250px;
+    margin-top: 100px;
 }
